Query reservations by user id not offerId, fix dob in updating user profile
